[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/icons/icon_128_show.svg" type="Texture" id=1]
[ext_resource path="res://components/wizard_editor/wizard_editor_nodes/wizard_editor_node_config_conditional.gd" type="Script" id=2]

[node name="StepConfigConditional" type="GraphNode"]
margin_top = 44.0
margin_right = 214.0
margin_bottom = 195.0
mouse_filter = 1
title = "Config Conditional"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 0.537255, 0.819608, 0.945098, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 0.342984, 0.803922, 0.109804, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color( 0.788235, 0.258824, 0.141176, 1 )
script = ExtResource( 2 )

[node name="Icon" type="TextureRect" parent="."]
modulate = Color( 0.537255, 0.819608, 0.945098, 1 )
margin_left = 113.0
margin_top = 34.0
margin_right = 134.0
margin_bottom = 55.0
rect_min_size = Vector2( 21, 21 )
size_flags_horizontal = 4
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Grid" type="GridContainer" parent="."]
margin_left = 8.0
margin_top = 59.0
margin_right = 239.0
margin_bottom = 235.0
columns = 2

[node name="ConfigLabel" type="Label" parent="Grid"]
margin_top = 6.0
margin_right = 82.0
margin_bottom = 26.0
text = "config key:"

[node name="ConfigEdit" type="LineEdit" parent="Grid"]
margin_left = 86.0
margin_right = 231.0
margin_bottom = 32.0
size_flags_vertical = 3

[node name="StepLabel" type="Label" parent="Grid"]
margin_top = 42.0
margin_right = 82.0
margin_bottom = 62.0
text = "variable:"

[node name="VariableNameEdit" type="LineEdit" parent="Grid"]
margin_left = 86.0
margin_top = 36.0
margin_right = 231.0
margin_bottom = 68.0
size_flags_vertical = 3

[node name="KindLabel" type="Label" parent="Grid"]
margin_top = 78.0
margin_right = 82.0
margin_bottom = 98.0
text = "kind:"

[node name="KindButton" type="OptionButton" parent="Grid"]
margin_left = 86.0
margin_top = 72.0
margin_right = 231.333
margin_bottom = 104.0
size_flags_horizontal = 3
text = "element_count"
items = [ "element_count", null, false, 0, null, "compare_values", null, false, 1, null ]
selected = 0

[node name="OperationLabel" type="Label" parent="Grid"]
margin_top = 114.0
margin_right = 82.0
margin_bottom = 134.0
text = "operation:"

[node name="OperationButton" type="OptionButton" parent="Grid"]
margin_left = 86.0
margin_top = 108.0
margin_right = 231.0
margin_bottom = 140.0
size_flags_horizontal = 3
text = "=="
items = [ "==", null, false, 0, null, "!=", null, false, 1, null, ">", null, false, 2, null, ">=", null, false, 3, null, "<", null, false, 4, null, "<=", null, false, 5, null, "has()", null, false, 6, null ]
selected = 0

[node name="StepLabelVal" type="Label" parent="Grid"]
margin_top = 150.0
margin_right = 82.0
margin_bottom = 170.0
text = "value:"

[node name="VariableValueEdit" type="LineEdit" parent="Grid"]
margin_left = 86.0
margin_top = 144.0
margin_right = 231.0
margin_bottom = 176.0
size_flags_vertical = 3

[connection signal="item_selected" from="Grid/KindButton" to="." method="_on_KindButton_item_selected"]
[connection signal="item_selected" from="Grid/OperationButton" to="." method="_on_OperationButton_item_selected"]
